--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inconsolata:wght@200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: "Fredoka", "sans-serif";
+  }
+}
